cursive-bootstrap/tests/ui/E-SEM/E-SEM-3132.cursive
// RUN: compile-fail
// DIAG: E-SEM-3132
// SPEC: 8.17
// DESC: Assignment through const permission

procedure assign_const(x: const i32) -> () {
    x = 10  //~ ERROR E-SEM-3132: assignment through const
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
